[gd_scene load_steps=2 format=3 uid="uid://dmm1oev1lo72t"]

[ext_resource type="Script" path="res://src/Extensions/Skeletor/Tool/skeleton_tool.gd" id="1_wwq80"]

[node name="SkeletonTool" type="VBoxContainer"]
offset_right = 177.0
offset_bottom = 233.0
script = ExtResource("1_wwq80")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2

[node name="Label" type="Label" parent="."]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Tool Name"
horizontal_alignment = 1

[node name="Section3" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Section3"]
layout_mode = 2
text = "General"

[node name="HSeparator" type="HSeparator" parent="Section3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
columns = 2

[node name="LiveUpdateCheckbox" type="CheckBox" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "(Enabled) The update happens continuously
as the bone is modified

(Disabled) The update only happens at the end of modification."

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
tooltip_text = "(Enabled) The update happens continuously
as the bone is modified

(Disabled) The update only happens at the end of modification."
mouse_filter = 1
text = "Live Update (slower)"

[node name="AllowChaining" type="CheckBox" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "When enabled, it will be possible to displace bone and
rotate it's parent at the same time (like a chain)."

[node name="Label3" type="Label" parent="GridContainer"]
layout_mode = 2
tooltip_text = "When enabled, it will be possible to displace bone and
rotate it's parent at the same time (like a chain)."
mouse_filter = 1
text = "Allow Chaining"

[node name="IncludeChildrenCheckbox" type="CheckBox" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Transformations applied through the buttons below
will also apply on the children."
button_pressed = true

[node name="Label2" type="Label" parent="GridContainer"]
layout_mode = 2
tooltip_text = "Transformations applied through the buttons below
will also apply on the children."
mouse_filter = 1
text = "Include bone children"

[node name="Section2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Section2"]
layout_mode = 2
text = "Skeleton"

[node name="HSeparator" type="HSeparator" parent="Section2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="QuickSetBones" type="MenuButton" parent="."]
layout_mode = 2
tooltip_text = "Quickly place bones over their respective sprites."
text = "Quick Set Bones"
flat = false

[node name="CopyPoseFrom" type="MenuButton" parent="."]
layout_mode = 2
tooltip_text = "Copies properties of selected bones from chosen frame to current frame."
text = "Copy Pose From"
flat = false

[node name="Section4" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Section4"]
layout_mode = 2
text = "Interpolation"

[node name="HSeparator" type="HSeparator" parent="Section4"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Warn" type="Button" parent="Section4"]
layout_mode = 2
text = "[⚠️]"
flat = true

[node name="TweenSkeleton" type="MenuButton" parent="."]
layout_mode = 2
tooltip_text = "Gererates In-Betweens from a chosen start frame to the current frame."
text = "Tween Skeleton"
flat = false

[node name="Section" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Section"]
layout_mode = 2
text = "Reset"

[node name="HSeparator" type="HSeparator" parent="Section"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RotationReset" type="MenuButton" parent="."]
layout_mode = 2
tooltip_text = "Resets the rotation of selected bones"
text = "Bone Rotation"
flat = false

[node name="PositionReset" type="MenuButton" parent="."]
layout_mode = 2
tooltip_text = "Resets the position of selected bones"
text = "Bone Position"
flat = false

[connection signal="toggled" from="GridContainer/LiveUpdateCheckbox" to="." method="_on_live_update_pressed"]
[connection signal="toggled" from="GridContainer/AllowChaining" to="." method="_on_allow_chaining_toggled"]
[connection signal="toggled" from="GridContainer/IncludeChildrenCheckbox" to="." method="_on_include_children_checkbox_toggled"]
[connection signal="about_to_popup" from="QuickSetBones" to="." method="_on_quick_set_bones_menu_about_to_popup"]
[connection signal="about_to_popup" from="CopyPoseFrom" to="." method="_on_copy_pose_from_about_to_popup"]
[connection signal="pressed" from="Section4/Warn" to="." method="_on_warn_pressed"]
[connection signal="about_to_popup" from="TweenSkeleton" to="." method="_on_tween_skeleton_about_to_popup"]
[connection signal="about_to_popup" from="RotationReset" to="." method="_on_rotation_reset_menu_about_to_popup"]
[connection signal="about_to_popup" from="PositionReset" to="." method="_on_position_reset_menu_about_to_popup"]
